# crossplatform_test

simple_executable/: CMakeLists.txt
simple_executable/src/: CMakeLists.txt  simple_executable.cpp
